# n_ode

./: .gitignore  README.md  litreview.md  pyproject.toml
ansible/: .gitignore  vm_provision.yaml
data/: .gitignore  dataset_params.yaml  readme.md
docs/: node_classification_Semkin.tex
experiment/chaotic_systems/: Snakefile  classification.py  config.yaml  fields.py  kalman_classification.py  lstm_classify.py
experiment/ecg5000/: Snakefile  classify.py  config.yaml  estimate_noise_std.py  learn_field.py
experiment/motion_sense/: Snakefile  config.yaml  estimate_noise.py  learn_field.py  subject_classify.py
experiment/motion_sense_sde/: Snakefile  config.yaml  estimate_r.py  inter_subj_classify.py  intra_subject_classify.py  learn_field.py  subject_classify.py
experiment/toy/: field_discrepency.ipynb  model_discrepency.ipynb  noise_classification.py  sde_classification.py  solver_discrepency_old.ipynb
experiments/: readme.md
experiments/bayes_classification/: .gitignore  bayes_modules.py  config.yaml  svi_train.py
experiments/hypothesis/: .gitignore  classify.py  classify_config.yaml  config.yaml  field_module.py  make_dataset.py  pipeline.py  snakefile  train.py  train_config.py  train_config.yaml  train_on_activity.py  train_on_activity_debug.py
experiments/learning_ode/: .gitignore  build_trajectories.py  config.yaml  field_model.py  model_distances.py  neural_ode_classification.ipynb  optimizer.py  pipeline.sh  train.py  train_all.py  traj_classification.ipynb  traj_classification_via_sqrt_model.ipynb
experiments/learning_ode_v2/: build_trajectories.py  config.yaml  field_model.py  model_distances.py  optimizer.py  train.py  (+3 more)
node/: data_modules.py  field_model.py  field_module.py  raw_data_loading.py  train.py  traj_build.py
paper/: .gitignore  lit.bib  node_classification_Semkin.tex
slides/: jog.csv  neural_ode_Semkin_slides.tex  ups.csv  viz_trajectories.ipynb
src/: data_loading.py
(+118 files in other folders)
