[tool.poetry]
name = "node"
version = "0.1.0"
description = "Neural Ode Classification"
authors = ["sem-k32"]
readme = "README.md"
packages = [{include = "node"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
torch = "^2.5.0"
ipykernel = "^6.29.5"
scipy = "^1.14.1"
scikit-learn = "^1.5.2"
tensorboard = "^2.18.0"
torchdyn = "^1.0.6"
pyro-ppl = "^1.9.1"
seaborn = "^0.13.2"
graphviz = "^0.20.3"
omegaconf = "^2.3.0"
lightning = "^2.5.0.post0"
torchdiffeq = "^0.2.5"
torchmetrics = "^1.6.1"
pipe = "^2.2"
wandb = "^0.19.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
