[project]
name = "n-ode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "filterpy>=1.4.5",
    "ipykernel>=7.2.0",
    "lightning>=2.6.1",
    "mlflow>=3.0",
    "more-itertools>=11.0.1",
    "omegaconf>=2.3.0",
    "pandas<3.0",
    "pipe>=2.2",
    "plotly>=6.6.0",
    "rich>=14.3.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "snakemake>=9.19.0",
    "toolz>=1.1.0",
    "torchdiffeq>=0.2.5",
    "torchmetrics>=1.0.3",
]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"

[tool.setuptools]
packages = ["experiment"]
